# papercast-edge-tts

./: setup.cfg
papercast_edge_tts/: processors.py
