[metadata]
name = papercast_edge_tts
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = Edge TTS plugin for Papercast
url = https://github.com/papercast-dev/papercast-edge-tts 

[options]
packages = find:
install_requires =
    # Any dependencies required by the plugin

[options.entry_points]
papercast.processors =
    EdgeTTSProcessor = papercast_edge_tts.processors:EdgeTTSProcessor